--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
+
+    <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-    <title>delices-afrique</title>
+
+    <!-- Viewport — critique pour mobile-first -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+
+    <!-- SEO &Description -->
+    <meta name="description" content="Délices d'Afrique — Le raffinement africain, à votre porte. Commandez vos pâtisseries et gâteaux en ligne." />
+    <meta name="theme-color" content="#2C1810" />
+
+    <!-- Open Graph (partage réseaux sociaux) -->
+    <meta property="og:title" content="Délices d'Afrique" />
+    <meta property="og:description" content="Le raffinement africain, à votre porte." />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="fr_FR" />
+
+
+    <!-- Google Fonts — toutes les variantes nécessaires -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500&family=Lato:wght@300;400;700;900&family=Playfair+Display:ital,wght@0,400;0,600;0,700;0,900;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Titre -->
+    <title>Délices d'Afrique</title>
   </head>
   <body>
     <div id="root"></div>
